Add copyright headers and update README with project background
- Add 'Copyright (c) 2025 by Lomaxxx' to all code files
- Update README with project background and hobby project explanation
- Add 'Made with ❤️ by Lomaxxx' footer
- Clarify feedback and contribution guidelines

--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,9 @@
   Main popup interface HTML structure for the extension.
   Includes tabs for Users, Rules, Marked Users, and Settings.
   
-  @version 1.0.0
+  @version 1.0.1
   
-  Copyright (c) 2025 Lomaxxx
-  All Rights Reserved.
+  Copyright (c) 2025 by Lomaxxx
   
   This software and associated documentation files (the "Software") are 
   proprietary and confidential. Unauthorized copying, modification, 
