--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<!--
+  X-Flagr (X.com Mod Community Tool)
+  Privacy Policy HTML
+  
+  Privacy policy page for the extension.
+  
+  @version 1.0.1
+  
+  Copyright (c) 2025 by Lomaxxx
+-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
