Update privacy policy dates and content
- Fix date from January 2025 to November 2024
- Update copyright year to 2024
- Add missing features (user notes, auto-updates)
- Clarify community-only mode in host permissions
- Sync HTML and Markdown versions

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,7 +7,7 @@
   
   @version 1.0.1
   
-  Copyright (c) 2025 by Lomaxxx
+  Copyright (c) 2024 by Lomaxxx
 -->
 <html lang="en">
 <head>
@@ -59,7 +59,7 @@
 </head>
 <body>
   <h1>Privacy Policy for X-Flagr</h1>
-  <p class="last-updated"><strong>Last Updated: January 2025</strong></p>
+  <p class="last-updated"><strong>Last Updated: November 2024</strong></p>
 
   <h2>Overview</h2>
   <p>X-Flagr ("the Extension") is committed to protecting your privacy. This Privacy Policy explains how the Extension handles data.</p>
@@ -74,7 +74,7 @@
     <li>Violation timestamps</li>
     <li>Violation counters</li>
     <li>User notes (optional)</li>
-    <li>User preferences (notifications, label visibility)</li>
+    <li>User preferences (notifications, label visibility, auto-updates)</li>
     <li>Custom rules and their colors</li>
   </ul>
 
@@ -124,8 +124,8 @@
   <strong>What it accesses</strong>: Your browser's notification system only.</p>
 
   <h3>Host Permissions (x.com, twitter.com)</h3>
-  <p><strong>Why needed</strong>: To inject labels and mark buttons into X.com and Twitter.com pages.<br>
-  <strong>What it accesses</strong>: Only X.com and Twitter.com domains, and only to display labels and moderation tools.</p>
+  <p><strong>Why needed</strong>: To inject labels, mark buttons, and quick-mark functionality into X.com and Twitter.com community pages.<br>
+  <strong>What it accesses</strong>: Only X.com and Twitter.com domains, and only within community pages to display labels and moderation tools.</p>
 
   <h2>Third-Party Services</h2>
   <p>The Extension does <strong>NOT</strong> use any third-party services, APIs, or analytics tools.</p>
@@ -144,7 +144,7 @@
   <p>You have complete control over your data:</p>
   <ul>
     <li>View all marked users in the extension popup</li>
-    <li>Delete individual users or violations at any time</li>
+    <li>Delete individual users, violations, or notes at any time</li>
     <li>Remove all data by uninstalling the extension</li>
     <li>Export data as JSON (available in Settings)</li>
     <li>Import data from backup (available in Settings)</li>
@@ -170,7 +170,7 @@
     <li>Access your stored data (via extension popup)</li>
     <li>Delete your data (via extension or uninstallation)</li>
     <li>Control extension permissions (via browser settings)</li>
-    <li>Disable specific features (notifications, labels)</li>
+    <li>Disable specific features (notifications, labels, auto-updates)</li>
     <li>Export your data for backup</li>
   </ul>
 
